# sm64gs2pc

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: checks.yml  deploy-web.yml  tests.yml
base-patches/: gameshark-base-sm64-port.patch  gameshark-base-sm64ex-nightly.patch  gameshark-base-sm64ex.patch  gameshark-base-sm64nx.patch
sm64gs2pc/: Cargo.toml  build.rs
sm64gs2pc-core/: Cargo.toml
sm64gs2pc-core/src/: decl.rs  decomp_data.rs  gameshark.rs  lib.rs  typ.rs
sm64gs2pc-web/: Cargo.toml  build.sh
sm64gs2pc-web/src/: lib.rs
sm64gs2pc-web/static/: index.html
sm64gs2pc/src/: decomp_data.rs  gameshark.rs  lib.rs  main.rs  typ.rs
sm64gs2pc/tests/: integration_tests.rs
sm64gs2pc/tools/: build-includes.py  build-maps.sh
src/: decl.rs  decomp_data.bincode  decomp_data.rs  gameshark.rs  left_value.rs  lib.rs  main.rs  typ.rs
tests/: integration_tests.rs
