[package]
name = "sm64gs2pc"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
description = "Convert Super Mario 64 GameShark codes to SM64 PC port patches"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sm64gs2pc/sm64gs2pc"

[dependencies]
snafu = "0.6.8"
patch = "0.5.0"
structopt = "0.3.16"
lazy_static = "1.4.0"
serde = { version = "1.0.115", features = ["derive"] }
walkdir = { version = "2.3.1", optional = true }
clang = { version = "1.0.0", features = ["clang_10_0"], optional = true }
bincode = "1.3.1"

[features]
loader = ["clang", "walkdir"]
