[package]
name = "sm64gs2pc-web"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
sm64gs2pc = { path = "../sm64gs2pc" }
yew = "0.19.3"
wasm-bindgen = "0.2.73"
web-sys = { version = "0.3.59", features = ["HtmlAnchorElement", "CssStyleDeclaration"] }
js-sys = "0.3.60"
heck = "0.4.0"

[lib]
crate_type = ["cdylib"]
