[package]
name = "sm64gs2pc-web"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
publish = false

[dependencies]
sm64gs2pc = { path = "../sm64gs2pc" }
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["HtmlAnchorElement", "CssStyleDeclaration"] }
js-sys = "0.3.61"
heck = "0.4.0"

[lib]
crate_type = ["cdylib"]
