[package]
name = "sm64gs2pc"
version = "1.0.4"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
description = "Convert Super Mario 64 GameShark codes to SM64 PC port patches"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/sm64gs2pc/sm64gs2pc"
categories = ["games"]
keywords = ["super-mario-64", "decompilation", "nintendo-64", "gameshark", "port"]

[dependencies]
snafu = "0.6.9"
patch = "0.5.0"
structopt = "0.3.19"
lazy_static = "1.4.0"
serde = { version = "1.0.116", features = ["derive"] }
walkdir = { version = "2.3.1", optional = true }
clang = { version = "1.0.2", features = ["clang_10_0"], optional = true }
bincode = "1.3.1"

[features]
loader = ["clang", "walkdir"]

[package.metadata.docs.rs]
all-features = true
