[package]
name = "sm64gs2pc"
version = "1.0.5"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"
description = "Convert Super Mario 64 GameShark codes to SM64 PC port patches"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/sm64gs2pc/sm64gs2pc"
categories = ["games"]
keywords = ["super-mario-64", "decompilation", "nintendo-64", "gameshark", "port"]

[dependencies]
snafu = "0.7.1"
patch = "0.6.0"
structopt = "0.3.26"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
walkdir = { version = "2.3.2", optional = true }
clang = { version = "2.0.0", features = ["clang_10_0"], optional = true }
bincode = "1.3.3"

[features]
loader = ["clang", "walkdir"]

[package.metadata.docs.rs]
all-features = true
